[gd_scene load_steps=22 format=3 uid="uid://cisowwf64s63a"]

[ext_resource type="Script" uid="uid://bo2xk6g7u4ly8" path="res://avatar creation/scenes/login_student.gd" id="1_t7otd"]
[ext_resource type="Texture2D" uid="uid://dht0iymgclsrx" path="res://avatar creation/ui/Rectangle 130.png" id="2_vms52"]
[ext_resource type="Texture2D" uid="uid://cnty4lwf80ycu" path="res://avatar creation/ui/Login_title.png" id="3_lb5xe"]
[ext_resource type="FontFile" uid="uid://cxmm3y2mpwlja" path="res://avatar creation/fonts/PressStart2P.ttf" id="4_f6ggw"]
[ext_resource type="FontFile" uid="uid://c1wcxniugtqaa" path="res://avatar creation/fonts/montserrat.regular.ttf" id="5_5r5it"]
[ext_resource type="PackedScene" uid="uid://dgdykjx4l6djc" path="res://avatar creation/scenes/OnScreenKeyboard.tscn" id="5_vms52"]
[ext_resource type="StyleBox" uid="uid://dm3ckbx1qbprs" path="res://student management/Button_shadow.tres" id="6_rf5vj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6a6wx"]
bg_color = Color(0.843137, 0.247059, 0.811765, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rlkrk"]
bg_color = Color(0.986752, 0.986752, 0.986752, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2

[sub_resource type="Theme" id="Theme_db2e0"]
Button/styles/normal = ExtResource("6_rf5vj")
LineEdit/colors/caret_color = Color(1, 1, 1, 1)
LineEdit/colors/clear_button_color = Color(0.875, 0.875, 0.875, 1)
LineEdit/colors/clear_button_color_pressed = Color(1, 1, 1, 1)
LineEdit/colors/font_color = Color(0.875, 0.875, 0.875, 1)
LineEdit/colors/font_outline_color = Color(0, 0, 0, 1)
LineEdit/colors/font_placeholder_color = Color(0.875, 0.875, 0.875, 0.6)
LineEdit/colors/font_selected_color = Color(1, 1, 1, 1)
LineEdit/colors/font_uneditable_color = Color(0.875, 0.875, 0.875, 0.5)
LineEdit/colors/selection_color = Color(0.5, 0.5, 0.5, 1)
LineEdit/styles/normal = SubResource("StyleBoxFlat_rlkrk")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b8e5g"]
bg_color = Color(0.172549, 0.905882, 0.776471, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q8yx2"]
bg_color = Color(0.172549, 0.905882, 0.776471, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j0fik"]
bg_color = Color(0.172549, 0.905882, 0.776471, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rbger"]
bg_color = Color(0.172549, 0.905882, 0.776471, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mx0fi"]
bg_color = Color(0.172549, 0.905882, 0.776471, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p78ld"]
bg_color = Color(0.172549, 0.905882, 0.776471, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3x55p"]
bg_color = Color(0.172549, 0.905882, 0.776471, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_47blu"]
bg_color = Color(0.172549, 0.905882, 0.776471, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_785mm"]
bg_color = Color(0.172549, 0.905882, 0.776471, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fq0ol"]
bg_color = Color(0.172549, 0.905882, 0.776471, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_73pyv"]
bg_color = Color(0.172549, 0.905882, 0.776471, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="AvatarCreation" type="Node2D"]
script = ExtResource("1_t7otd")
metadata/_edit_vertical_guides_ = [835.0]

[node name="ColorRect3" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1600, 900)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1604.0
offset_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.027451, 0.215686, 1)

[node name="ColorRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1600, 900)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = 1615.0
offset_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vms52")
expand_mode = 2
stretch_mode = 5

[node name="TitleImage" type="TextureRect" parent="ColorRect"]
custom_minimum_size = Vector2(903, 190)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06591191
anchor_top = 0.0044444446
anchor_right = 0.06591191
anchor_bottom = 0.0044444446
offset_left = 453.75
offset_top = 4.0
offset_right = 2478.75
offset_bottom = 392.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_lb5xe")
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.084367245
anchor_top = -0.075555556
anchor_right = -0.084367245
anchor_bottom = -0.075555556
offset_left = 286.0
offset_top = 501.0
offset_right = 1644.0
offset_bottom = 902.0
metadata/_edit_use_anchors_ = true

[node name="NameLabel" type="RichTextLabel" parent="."]
clip_contents = false
custom_minimum_size = Vector2(125, 22)
offset_left = 856.0
offset_top = 207.0
offset_right = 1074.0
offset_bottom = 229.0
theme_override_colors/default_color = Color(1, 0.866667, 0.537255, 1)
theme_override_fonts/normal_font = ExtResource("4_f6ggw")
theme_override_font_sizes/normal_font_size = 24
text = "Password:"

[node name="AgeLabel" type="RichTextLabel" parent="."]
clip_contents = false
custom_minimum_size = Vector2(109, 22)
offset_left = 108.0
offset_top = 192.0
offset_right = 354.0
offset_bottom = 221.0
theme_override_colors/default_color = Color(1, 0.866667, 0.537255, 1)
theme_override_fonts/normal_font = ExtResource("4_f6ggw")
theme_override_font_sizes/normal_font_size = 24
text = "User Name:"

[node name="SaveButton" type="Button" parent="."]
custom_minimum_size = Vector2(559.16, 60)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 237.0
offset_top = 312.0
offset_right = 796.16003
offset_bottom = 372.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_5r5it")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_6a6wx")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_6a6wx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6a6wx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_6a6wx")
theme_override_styles/hover = SubResource("StyleBoxFlat_6a6wx")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_6a6wx")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_6a6wx")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_6a6wx")
theme_override_styles/disabled = SubResource("StyleBoxFlat_6a6wx")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_6a6wx")
theme_override_styles/focus = SubResource("StyleBoxFlat_6a6wx")
text = "Sign Up"

[node name="NameEdit" type="LineEdit" parent="."]
offset_left = 386.0
offset_top = 190.0
offset_right = 773.0
offset_bottom = 225.0
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_db2e0")
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Password" type="LineEdit" parent="."]
offset_left = 1134.0
offset_top = 200.0
offset_right = 1521.0
offset_bottom = 235.0
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_db2e0")
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="OnScreenKeyboard" parent="." instance=ExtResource("5_vms52")]
offset_left = 831.0
offset_top = 833.0
offset_right = 831.0
offset_bottom = 833.0

[node name="StudentManager" type="Node2D" parent="."]

[node name="SaveButton2" type="Button" parent="."]
custom_minimum_size = Vector2(559.16, 60)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 843.0
offset_top = 317.0
offset_right = 1402.16
offset_bottom = 377.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_5r5it")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_b8e5g")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_q8yx2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_j0fik")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_rbger")
theme_override_styles/hover = SubResource("StyleBoxFlat_mx0fi")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_p78ld")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_3x55p")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_47blu")
theme_override_styles/disabled = SubResource("StyleBoxFlat_785mm")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_fq0ol")
theme_override_styles/focus = SubResource("StyleBoxFlat_73pyv")
text = "Login"

[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="SaveButton2" to="." method="_on_save_button_2_pressed"]
